@@ -1,3 +1,8 @@
+Tue Oct 23 12:28:56 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: add "save all unsaved" menu item, fix the save
+	  as dialog, and add confirmation on closing unsaved things.
+
 Tue Oct 23 11:33:56 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* lib/functions/numerical.gel: remove IsGaussianInteger, we already
